--- a/src/components/HeroImgStyles.css
+++ b/src/components/HeroImgStyles.css
@@ -56,16 +56,60 @@
 	justify-content: center;
 }
 
-form{
-    max-width: auto;
+/* .link-input{
+    font-family: arial,sans-serif;
+    line-height: 22px;
+    margin-bottom: 8px;
+    overflow-x: hidden;
+} */
+
+.link-input {
+	background-color: white;
+	color: black;
+    border: none;
+    padding: 1px 9px;
+	height: 30px;
+    
+}
+.link-input:focus {
+    outline: none;
+}
+
+.set-date{
+    background-color: rgb(211, 208, 208);
+	color: black;
+    border: none;
+    padding: 1px 9px;
+	height: 30px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+}
+.set-date:focus{
+    outline: none;
+}
+form {
+	display: flex;
+	flex-direction: row;
+    border-radius: 25px;
+}
+
+button{
+    display: flex;
+    width: 50px;
+    border: none;
+    background-color: rgb(59, 121, 255);
+    justify-content: center;
+    align-items: center;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 
 @media screen and (max-width: 640px) {
-    .hero .content h1{
-        font-size: 3rem;
-    }
-    
-    .hero .content p{
-        font-size: 1.4rem;
-    }
-} 
+	.hero .content h1 {
+		font-size: 3rem;
+	}
+
+	.hero .content p {
+		font-size: 1.4rem;
+	}
+}
