--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -3,7 +3,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 1rem;
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	height: 90px;
 	z-index: 10;
