--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -3,7 +3,10 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 1rem;
-	position: absolute;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
 	width: 100%;
 	height: 90px;
 	z-index: 10;
